Try use custom node

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,6 +11,11 @@ jobs:
         with:
           submodules: 'true'
 
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '16.x'
+
       - name: Docker
         run: |
           mkdir -p dist/
