--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
-    "css-loader": "^2.1.1",
-    "html-webpack-plugin": "^4.5.0",
-    "keen-ui": "^1.1.2",
-    "style-loader": "^2.0.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.9.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0"
+    "css-loader": "^0.15.6",
+    "keen-ui": "^1.4.0",
+    "style-loader": "^0.12.4",
+    "vue": "^2.7.16",
+    "vue-loader": "^15.11.1",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
     "ava": "^3.13.0",
     "browser-env": "^3.2.6",
     "esm": "^3.2.22",
-    "ninos": "^2.0.2",
-    "prettier": "^1.17.0"
+    "html-webpack-plugin": "^5.6.4",
+    "prettier": "^1.17.0",
+    "sinon": "^21.0.0",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   }
 }
