--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "webpack",
     "build:watch": "npm run build -- --watch",
     "start": "npm run build:watch",
-    "test": "ava --verbose",
-    "test:watch": "npm run test -- --watch"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "css-loader": "^0.15.6",
@@ -26,10 +26,8 @@
     "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
-    "ava": "^3.13.0",
-    "browser-env": "^3.2.6",
-    "esm": "^3.2.22",
     "html-webpack-plugin": "^5.6.4",
+    "jest": "^29.7.0",
     "prettier": "^1.17.0",
     "sinon": "^21.0.0",
     "webpack": "^5.102.1",
