--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "H264 bistream viewer",
   "author": "Michael Radionov (https://github.com/mradionov)",
   "license": "MIT",
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mradionov/h264-bitstream-viewer.git"
@@ -14,8 +13,8 @@
     "build": "webpack",
     "build:watch": "npm run build -- --watch",
     "start": "npm run build:watch",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "css-loader": "^0.15.6",
@@ -27,9 +26,12 @@
     "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "html-webpack-plugin": "^5.6.4",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.2.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^1.17.0",
     "sinon": "^21.0.0",
     "webpack": "^5.102.1",
