--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "css-loader": "^0.15.6",
     "keen-ui": "^1.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "style-loader": "^0.12.4",
     "vue": "^2.7.16",
     "vue-loader": "^15.11.1",
@@ -28,6 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "babel-jest": "^29.7.0",
     "html-webpack-plugin": "^5.6.4",
     "jest": "^29.7.0",
