--- a/package.json
+++ b/package.json
@@ -18,14 +18,9 @@
   },
   "dependencies": {
     "css-loader": "^0.15.6",
-    "keen-ui": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "style-loader": "^0.12.4",
-    "vue": "^2.7.16",
-    "vue-loader": "^15.11.1",
-    "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.16"
+    "style-loader": "^0.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
